# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.h  friend.proto  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  mprpcprovider.cpp  rpcprovider.cpp  zookeeperutil.cpp
src/include/: lockqueue.hpp  logger.hpp  mprpcapplication.hpp  mprpcchannel.hpp  mprpcconfig.hpp  mprpccontroller.hpp  rpcprovider.hpp  zookeeperutil.hpp
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
